fixed scrollbar visibility for firefox on a mac (#1877)
git-svn-id: https://svn.socialplanning.org/svn/opencore/trunk@11575 40f73b84-6177-4a8e-8c61-7eee4b1974ed

--- a/opencore/browser/css/opencore.css
+++ b/opencore/browser/css/opencore.css
@@ -1578,6 +1578,7 @@ textarea {
 textarea {
   display: block;
   visibility: hidden;
+  overflow: hidden;
   margin-bottom: 1em;
 }
 fieldset {
